--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-code-block-lowlight": "^2.1.7",
     "@tiptap/extension-dropcursor": "^2.0.0-beta.218",
     "@tiptap/extension-font-family": "^2.0.0-beta.218",
     "@tiptap/extension-image": "^2.0.0-beta.218",
@@ -27,6 +28,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "dayjs": "^1.11.7",
+    "lowlight": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
