replaced image element with figures

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-code-block-lowlight": "^2.1.7",
-    "@tiptap/extension-dropcursor": "^2.0.0-beta.218",
-    "@tiptap/extension-font-family": "^2.0.0-beta.218",
-    "@tiptap/extension-image": "^2.0.0-beta.218",
-    "@tiptap/extension-link": "^2.0.0-beta.218",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.218",
-    "@tiptap/extension-text-align": "^2.0.0-beta.218",
-    "@tiptap/extension-text-style": "^2.0.0-beta.218",
+    "@tiptap/extension-dropcursor": "^2.1.7",
+    "@tiptap/extension-font-family": "^2.1.7",
+    "@tiptap/extension-image": "^2.1.7",
+    "@tiptap/extension-link": "^2.1.7",
+    "@tiptap/extension-placeholder": "^2.1.7",
+    "@tiptap/extension-text-align": "^2.1.7",
+    "@tiptap/extension-text-style": "^2.1.7",
     "@tiptap/extension-typography": "^2.0.1",
-    "@tiptap/react": "^2.0.0-beta.218",
-    "@tiptap/starter-kit": "^2.0.0-beta.218",
+    "@tiptap/react": "^2.1.7",
+    "@tiptap/starter-kit": "^2.1.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
